name:     raaz-ssh
version:  0.0.0.1
category: Network, Raaz

synopsis: Implementation of the ssh protocol.

description: This package implements the ssh protocol.


homepage: http://github.com/piyush-kurur/raaz

license:      BSD3
license-file: LICENSE
author:       Piyush P Kurur
maintainer:   ppk@cse.iitk.ac.in


build-type:    Simple
cabal-version: >=1.8

bug-reports: https://github.com/piyush-kurur/raaz/issues

source-repository head
  type: git
  location: https://github.com/piyush-kurur/raaz
  subdir: raaz-ssh

library
  exposed-modules: Raaz.Network.SSH.Transport
                 , Raaz.Network.SSH.Message.Type
                 , Raaz.Network.SSH.Message.Parser
                 , Raaz.Network.SSH.Naming
                 , Raaz.Network.SSH.Backend
                 , Raaz.Network.SSH.Context
                 , Raaz.Network.SSH.Exception
  other-modules: Paths_raaz_ssh
  build-depends: base                           >= 4.5 && < 4.8
               , bytestring                     >= 0.9 && < 0.11
               , network                        >= 2.4 && < 2.5
               , text                           >= 0.10 && < 1.2
               --
               -- Raaz dependencies
               --
               , raaz-primitives                >=0.0.0.1 && < 0.0.0.2
               , raaz-hash                      >=0.0.0.1 && < 0.0.0.2
               , raaz-cipher                    >=0.0.0.1 && < 0.0.0.2
               , raaz-random                    >=0.0.0.1 && < 0.0.0.2

test-Suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  build-depends: base
